# fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  ARDOR.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  set_policy.py
app/api/: README.md  deps.py
app/core/: README.md  config.py  constants.py  security.py  utils.py
app/crud/: README.md  base.py
app/db/: README.md  database.py  deps.py
app/db/models/: base.py  video.py
app/schemas/: README.md  common.py
app/services/: README.md
